# qgis-planscape-plugin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  AGENTS.md  Makefile  README.md  create_qgis_venv.py  pyproject.toml  qgis-planscape-plugin.code-workspace  ruff_defaults.toml
.github/workflows/: code-style.yml  release.yml  test-and-pre-release.yml
.qgis-settings/profiles/default/: symbology-style.db
docs/: development.md
planscape/: __init__.py  auth.py  build.py  metadata.txt  plugin.py
planscape/api/: __init__.py  auth.py  common.py  datalayer.py  dataset.py  exceptions.py  style.py  workspace.py
planscape/gui/: __init__.py  auth_dialog.py  dataset_dialog.py  dock_nodes.py  planscape_dock.py  workspace_dialog.py
planscape/gui/behaviors/: __init__.py  base.py  category.py  category_collection.py  datalayer.py  datalayer_collection.py  dataset.py  dataset_collection.py  server.py  (+4 more)
planscape/models/: __init__.py
planscape/processing/: __init__.py  import_raster.py  import_vector.py  provider.py  raster_import.py  raster_style.py  skeleton_algorithm.py
planscape/services/: __init__.py  auth_service.py  workspace_service.py
planscape/tools/: network.py
tests/: test_auth.py  test_dataset_dialog.py  test_domain_nodes.py  test_plugin.py  test_workspace_dialog.py
tests/api/: __init__.py  test_auth.py  test_datalayer.py  test_dataset.py  test_style.py  test_workspace.py
tests/processing/: test_raster_import.py  test_raster_style.py
tests/services/: test_auth_service.py  test_workspace_service.py
tests/tools/: test_network.py
(+37 files in other folders)
